tests/invalid/preferGetPlayers.ts
// @ts-nocheck
declare const Players: { GetChildren(): unknown[]; GetPlayers(): unknown[] };
const children = Players.GetChildren();
